@@ -6,8 +6,8 @@ import cn.tuyucheng.taketoday.spring.data.persistence.springdatajpadifference.sp
 import cn.tuyucheng.taketoday.spring.data.persistence.springdatajpadifference.springdata.repository.EmployeeRepository;
 import cn.tuyucheng.taketoday.spring.data.persistence.springdatajpadifference.springdata.repository.EmployeeRepositoryPagingAndSort;
 import com.querydsl.jpa.impl.JPAQueryFactory;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -15,138 +15,137 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.test.annotation.Rollback;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static cn.tuyucheng.taketoday.spring.data.persistence.springdatajpadifference.TestUtils.employee;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 @ContextConfiguration(classes = SpringDataJpaConfig.class)
-@RunWith(SpringJUnit4ClassRunner.class)
+@ExtendWith(SpringExtension.class)
 @Transactional
 @Rollback
-public class SpringDataJpaIntegrationTest {
+class SpringDataJpaIntegrationTest {
 
-    @Autowired
-    private EmployeeRepository employeeRepository;
+   @Autowired
+   private EmployeeRepository employeeRepository;
 
-    @Autowired
-    private EmployeeRepositoryPagingAndSort employeeRepositoryPagingAndSort;
+   @Autowired
+   private EmployeeRepositoryPagingAndSort employeeRepositoryPagingAndSort;
 
-    @Autowired
-    private JPAQueryFactory jpaQueryFactory;
+   @Autowired
+   private JPAQueryFactory jpaQueryFactory;
 
-    @Test
-    public void givenPersistedEmployee_whenFindById_thenEmployeeIsFound() {
-        Employee employee = employee("John", "Doe");
+   @Test
+   void givenPersistedEmployee_whenFindById_thenEmployeeIsFound() {
+      Employee employee = employee("John", "Doe");
 
-        employeeRepository.save(employee);
+      employeeRepository.save(employee);
 
-        assertEquals(Optional.of(employee), employeeRepository.findById(employee.getId()));
-    }
+      assertEquals(Optional.of(employee), employeeRepository.findById(employee.getId()));
+   }
 
-    @Test
-    public void givenPersistedEmployee_whenFindByFirstName_thenEmployeeIsFound() {
-        Employee employee = employee("John", "Doe");
+   @Test
+   void givenPersistedEmployee_whenFindByFirstName_thenEmployeeIsFound() {
+      Employee employee = employee("John", "Doe");
 
-        employeeRepository.save(employee);
+      employeeRepository.save(employee);
 
-        assertEquals(employee, employeeRepository.findByFirstName(employee.getFirstName())
-              .get(0));
-    }
+      assertEquals(employee, employeeRepository.findByFirstName(employee.getFirstName())
+            .get(0));
+   }
 
-    @Test
-    public void givenPersistedEmployee_whenUpdateEmployeeEmail_thenEmployeeHasUpdatedEmail() {
-        Employee employee = employee("John", "Doe");
+   @Test
+   void givenPersistedEmployee_whenUpdateEmployeeEmail_thenEmployeeHasUpdatedEmail() {
+      Employee employee = employee("John", "Doe");
 
-        employeeRepository.save(employee);
+      employeeRepository.save(employee);
 
-        Employee employeeToUpdate = employeeRepository.findById(employee.getId())
-              .orElse(null);
+      Employee employeeToUpdate = employeeRepository.findById(employee.getId())
+            .orElse(null);
 
-        assertNotNull(employeeToUpdate);
-        assertEquals(employee, employeeToUpdate);
+      assertNotNull(employeeToUpdate);
+      assertEquals(employee, employeeToUpdate);
 
-        String updatedEmail = "email@gmail.com";
+      String updatedEmail = "email@gmail.com";
 
-        employeeToUpdate.setEmail(updatedEmail);
+      employeeToUpdate.setEmail(updatedEmail);
 
-        employeeRepository.save(employeeToUpdate);
+      employeeRepository.save(employeeToUpdate);
 
-        assertEquals(Optional.of(employeeToUpdate), employeeRepository.findById(employee.getId()));
-    }
+      assertEquals(Optional.of(employeeToUpdate), employeeRepository.findById(employee.getId()));
+   }
 
-    @Test
-    public void givenPersistedEmployee_whenRemoveEmployee_thenNoEmployeeIsFound() {
-        Employee employee = employee("John", "Doe");
+   @Test
+   void givenPersistedEmployee_whenRemoveEmployee_thenNoEmployeeIsFound() {
+      Employee employee = employee("John", "Doe");
 
-        employeeRepository.save(employee);
+      employeeRepository.save(employee);
 
-        Employee persistedEmployee = employeeRepository.findById(employee.getId())
-              .orElse(null);
+      Employee persistedEmployee = employeeRepository.findById(employee.getId())
+            .orElse(null);
 
-        assertNotNull(persistedEmployee);
+      assertNotNull(persistedEmployee);
 
-        employeeRepository.delete(persistedEmployee);
+      employeeRepository.delete(persistedEmployee);
 
-        assertFalse(employeeRepository.findById(employee.getId())
-              .isPresent());
-    }
+      assertFalse(employeeRepository.findById(employee.getId())
+            .isPresent());
+   }
 
-    @Test
-    public void givenPersistedEmployees_whenFindSortedByFirstName_thenEmployeeAreFoundInOrder() {
-        Employee john = employee("John", "Doe");
-        Employee bob = employee("Bob", "Smith");
-        Employee frank = employee("Frank", "Brown");
+   @Test
+   void givenPersistedEmployees_whenFindSortedByFirstName_thenEmployeeAreFoundInOrder() {
+      Employee john = employee("John", "Doe");
+      Employee bob = employee("Bob", "Smith");
+      Employee frank = employee("Frank", "Brown");
 
-        employeeRepository.saveAll(Arrays.asList(john, bob, frank));
+      employeeRepository.saveAll(Arrays.asList(john, bob, frank));
 
-        List<Employee> employees = employeeRepository.findAllEmployee(Sort.by("firstName"));
+      List<Employee> employees = employeeRepository.findAllEmployee(Sort.by("firstName"));
 
-        assertEquals(3, employees.size());
-        assertEquals(bob, employees.get(0));
-        assertEquals(frank, employees.get(1));
-        assertEquals(john, employees.get(2));
-    }
+      assertEquals(3, employees.size());
+      assertEquals(bob, employees.get(0));
+      assertEquals(frank, employees.get(1));
+      assertEquals(john, employees.get(2));
+   }
 
-    @Test
-    public void givenPersistedEmployee_whenFindByQueryDsl_thenEmployeeIsFound() {
-        Employee john = employee("John", "Doe");
-        Employee frank = employee("Frank", "Doe");
+   @Test
+   void givenPersistedEmployee_whenFindByQueryDsl_thenEmployeeIsFound() {
+      Employee john = employee("John", "Doe");
+      Employee frank = employee("Frank", "Doe");
 
-        employeeRepository.saveAll(Arrays.asList(john, frank));
+      employeeRepository.saveAll(Arrays.asList(john, frank));
 
-        QEmployee employeePath = QEmployee.employee;
+      QEmployee employeePath = QEmployee.employee;
 
-        List<Employee> employees = jpaQueryFactory.selectFrom(employeePath)
-              .where(employeePath.firstName.eq("John"), employeePath.lastName.eq("Doe"))
-              .fetch();
+      List<Employee> employees = jpaQueryFactory.selectFrom(employeePath)
+            .where(employeePath.firstName.eq("John"), employeePath.lastName.eq("Doe"))
+            .fetch();
 
-        assertEquals(1, employees.size());
-        assertEquals(john, employees.get(0));
-    }
+      assertEquals(1, employees.size());
+      assertEquals(john, employees.get(0));
+   }
 
-    @Test
-    public void givenPersistedEmployee_whenFindBySortAndPagingRepository_thenEmployeeAreFound() {
-        Employee john = employee("John", "Doe");
-        Employee bob = employee("Bob", "Smith");
-        Employee frank = employee("Frank", "Brown");
-        Employee jimmy = employee("Jimmy", "Armstrong");
+   @Test
+   void givenPersistedEmployee_whenFindBySortAndPagingRepository_thenEmployeeAreFound() {
+      Employee john = employee("John", "Doe");
+      Employee bob = employee("Bob", "Smith");
+      Employee frank = employee("Frank", "Brown");
+      Employee jimmy = employee("Jimmy", "Armstrong");
 
-        employeeRepositoryPagingAndSort.saveAll(Arrays.asList(john, bob, frank, jimmy));
+      employeeRepositoryPagingAndSort.saveAll(Arrays.asList(john, bob, frank, jimmy));
 
-        Pageable pageable = PageRequest.of(0, 2, Sort.by("firstName"));
+      Pageable pageable = PageRequest.of(0, 2, Sort.by("firstName"));
 
-        Page<Employee> employees = employeeRepositoryPagingAndSort.findAll(pageable);
+      Page<Employee> employees = employeeRepositoryPagingAndSort.findAll(pageable);
 
-        assertEquals(Arrays.asList(bob, frank), employees.get()
-              .collect(Collectors.toList()));
-    }
+      assertEquals(Arrays.asList(bob, frank), employees.get()
+            .toList());
+   }
 }
